<resources>
    <string name="app_name">Hello World</string>
    <string name="title_activity_bolt">BoltActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Bolt App</string>
    <string name="hello_second_fragment">Vult App</string>
    <string name="title_activity_main2">Splash Activity</string>

    <string name="zcn_balance">%1$s</string>
    <string name="zcn_dollar">$%1$.1f</string>
    <string name="no_recent_transaction">No Recent Transactions</string>
    <string name="receive">Receive</string>
    <string name="send">Send</string>
    <string name="receiver_client_id">Enter Receiver Client Id</string>
    <string name="upload_file">Upload File</string>
    <string name="download_file">Download File</string>
    <string name="bolt">Bolt</string>
    <string name="vult">Vult</string>
    <string name="label_create_wallet">Create Wallet</string>
    <string name="label_bolt_fragment">BoltFragment</string>
    <string name="label_select_app_fragment">Select App</string>
    <string name="label_vult_fragment">Vult Fragment</string>
    <string name="create_allocation">Create Allocation</string>
    <string name="available_balance">Available Balance</string>
    <string name="base_token">ZCN</string>
    <string name="total_balance">Total Balance</string>
    <string name="base_dollar">$0</string>
    <string name="image_place_holder_text">send token</string>
    <string name="faucet">Faucet</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="transaction_list_item">%1$d. %2$s... %3$s</string>
    <string name="transaction_list_item_date">%1$s</string>
    <string name="enter_client_id_of_receiver">Enter Client Id of Receiver</string>
    <string name="enter_amount">Enter amount</string>
    <string name="receiver_client_id_">Receiver Client ID</string>
    <string name="_9e330d869f8e195c650a">9e330d869f8e195c650a...fewjif939032u03u9u</string>
    <string name="storage_used">%1$s used of %2$s</string>
    <string name="allocation_details">Allocation\n Details</string>
    <string name="upload_document">Upload File</string>
    <string name="upload_image">Upload Image</string>
    <string name="wallet_details_dummy">
        client_id:"0e789ab0840f454e2d145088507d41faf78bc553b64798bd8e350c596b8d83c9",\n
        "client_key":"dd6f0126f0db271e88ee63d74dc786766fab283a7c22e8a03a8fa960f546430a42cdfd380db762b6f91abdbc7d2005c0d0331dbcb2f1ca397d231b6bd1d08523",
        "keys":[{
                "public_key":"dd6f0126f0db271e88ee63d74dc786766fab283a7c22e8a03a8fa960f546430a42cdfd380db762b6f91abdbc7d2005c0d0331dbcb2f1ca397d231b6bd1d08523"
                "private_key":"ed78e43974fbdfcb74a20b46c22cf3bc8bd7cbd6bf5979f67864d67b35a1910c"}],
        "mnemonics":"brush box act east screen capital auto hobby swing brain process nuclear silk left exclude grid runway grain royal traffic human course replace give",
        "version":"1.0",
        "date_created":"1672840441",
        "nonce":0}</string>
    <string name="wallet_details_template">
        client_id: %1$s \n
        client_key: %2$s \n
        keys: %3$s \n
        mnemonics: %4$s \n
        version: %5$s \n
        date_created: %6$s \n
    </string>
    <string name="wallet_json_title">Wallet JSON</string>
    <string name="wallet_json">
       {\n
          "client_id": "9e3a2a52c365540f23e129890d1b1a04cfa2d33e2efd685b49f0fe9db9d52c41",\n
          "client_key": "3a43be68984074c51db4a11019823f5dee3179c7fddf487fd2252cc13e4e861338ee63514226462376e5fe1cd4235607a1fe28edfe728b13e3428711c4151f97",\n
          "keys": [\n
            {\n
              "public_key": "3a43be68984074c51db4a11019823f5dee3179c7fddf487fd2252cc13e4e861338ee63514226462376e5fe1cd4235607a1fe28edfe728b13e3428711c4151f97",\n
              "private_key": "66f3de00741cda9b777ff7424e69df06701f96774690050730bef53653e2da0b"\n
            }\n
          ],\n
          "mnemonics": "letter quantum brisk venture happy mind thought company govern water much aunt topple physical civil pizza merry grief fresh choice fire game digital fiction",\n
          "version": "1.0",\n
          "date_created": "1678257901",\n
          "nonce": 0\n
        }
    </string>
    <string name="no_wallet">Create a wallet first</string>
    <string name="no_allocation">No allocation</string>
    <string name="wallet_details">Wallet\n Details</string>
    <string name="network_details">Network\n Details</string>
    <string name="generic_title">Generic Title</string>
    <string name="details">Details</string>
    <string name="sample_client_id">4tu4934u903j49gj439gj9340jg9034jg89034hg89h4398gh4839gh9834hg</string>
    <string name="title_client_id">Client ID:</string>
    <string name="network_details_title">Network Details</string>
    <string name="allocation_details_title">Allocation Details</string>
    <string name="wallet_details_title">Wallet Details</string>
    <string name="creating_allocation">Creating Vult Allocation</string>
    <string name="open">Open</string>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="shards_and_challenges_details_title">Shards and Challenges</string>
    <string name="select_network">Select Network</string>
    <string name="_1_zcn_0_0001_usd">%1$.04f ZCN = $ %2$.04f</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="loading">Loading…</string>
    <string name="allocation_used_size_info">Allocation\'s used size is twice the summation of file sizes due to parity shards = 2</string>
</resources>
