<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/website_zus_color"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/myRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".6"
                app:cardBackgroundColor="@color/website_zus_color_variant_card_view"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:ignore="NestedWeights">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:ignore="UselessParent">

                        <TextView
                            android:id="@+id/zcnBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="@string/zcn_balance"
                            android:textColor="@color/design_default_color_on_primary"
                            android:textSize="50sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/mRefresh"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="18sp"
                            android:layout_marginEnd="10dp"
                            android:layout_toEndOf="@+id/zcnBalance"
                            android:contentDescription="@string/app_name"
                            android:src="@mipmap/icon_swap" />

                        <TextView
                            android:id="@+id/zcnDollar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/zcnBalance"
                            android:layout_centerInParent="true"
                            android:textAlignment="center"
                            android:textColor="@color/green_bolt" />

                    </RelativeLayout>


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/website_zus_color_variant_card_view"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/textView"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/receiverClientId"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/receiver_client_id"
                                android:inputType="text" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:id="@+id/msend_token"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:contentDescription="@string/app_name"
                            android:src="@mipmap/icon_send"
                            app:layout_constraintBottom_toTopOf="@+id/textView"
                            app:layout_constraintEnd_toEndOf="@+id/textView"
                            app:layout_constraintStart_toStartOf="@+id/textView"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_chainStyle="packed" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="30dp"
                            android:text="@string/send"
                            android:textAlignment="center"
                            android:textColor="@color/design_default_color_on_primary"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/msend_token" />


                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/mreceiveToken"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="true"
                        app:cardBackgroundColor="@color/website_zus_color_variant_card_view"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="10dp"
                        app:cardUseCompatPadding="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/receive"
                            android:textAlignment="center"
                            android:textColor="@color/design_default_color_on_primary"
                            android:textSize="25sp" />
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="16sp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="48sp"
                android:background="@color/color_bg_blue"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="32sp"
                android:layout_marginRight="32sp"
                android:layout_marginBottom="32sp"
                android:background="@drawable/bg_curv_white"
                android:elevation="15sp"
                android:orientation="vertical">

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/mRefreshList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/transactionView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp" />
                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


                <TextView
                    android:id="@+id/noRecentTrans"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/no_recent_transaction"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
