<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/website_zus_color"
        tools:context=".ui.vult.VultFragment">

        <ImageView
            android:id="@+id/iv_vult_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_vult_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/website_zus_color_variant_card_view"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_vult_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:padding="5dp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_allocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Allocation"
                    android:textColor="@color/normal_text_color"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_allocation_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7/1/2022, 6:07PM"
                    android:textColor="@color/normal_text_color"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_allocation" />

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/allocation_progress_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="30"
                    android:progressBackgroundTint="@color/color_grey"
                    app:indicatorColor="@color/vult_blue"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_allocation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_allocation"
                    app:layout_constraintTop_toTopOf="@+id/tv_allocation"
                    app:trackThickness="10dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_storage_used"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/storage_used"
                    android:textColor="@color/normal_text_color"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/allocation_progress_view"
                    app:layout_constraintTop_toBottomOf="@+id/allocation_progress_view" />
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/storage_used_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/allocation_used_size_info"
                    android:textColor="@color/normal_text_color"
                    android:textSize="10sp"
                    app:layout_constraintStart_toStartOf="@+id/allocation_progress_view"
                    app:layout_constraintEnd_toEndOf="@id/allocation_progress_view"
                    app:layout_constraintTop_toBottomOf="@+id/tv_storage_used" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent=".4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_upload_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:clickable="true"
            android:elevation="10dp"
            android:focusable="true"
            app:cardBackgroundColor="@color/website_zus_color_variant_card_view"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toStartOf="@+id/cv_upload_document"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/materialCardView"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingVertical="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_upload_image" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/CardTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/upload_image"
                    android:textColor="@color/normal_text_color" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_upload_document"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:clickable="true"
            android:elevation="10dp"
            android:focusable="true"
            app:cardBackgroundColor="@color/website_zus_color_variant_card_view"
            app:cardCornerRadius="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cv_upload_image"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingVertical="20dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_upload_document" />

                <TextView
                    style="@style/CardTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/upload_document"
                    android:textColor="@color/normal_text_color" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_all_files"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="All Files"
            android:textColor="@color/normal_text_color"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/cv_upload_image"
            app:layout_constraintTop_toBottomOf="@+id/cv_upload_image" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_all_files"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_all_files"
            tools:itemCount="5"
            tools:listitem="@layout/row_view_files" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
